--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule ".bin/findGitHubEmail"]
 	path = .bin/findGitHubEmail
-	url = git@github.com:hodgesmr/FindGitHubEmail.git
+	url = https://github.com/hodgesmr/FindGitHubEmail.git
